MODREQMED-211: Fix sonarcloud issues & coverage